--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-Django~=2.2.4
+dj==0.1
+dj-database-url==0.5.0
+Django==2.2.4
+gunicorn==20.1.0
+instance==0.0.0.0.0.0a0.dev20210120
+pytz==2021.1
+sqlparse==0.4.2
+whitenoise==5.3.0
+psycopg2==2.8.6
